// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnboardingCard render celebrate card 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 4,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginVertical": 8,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 0,
        "marginBottom": 5,
        "marginHorizontal": 0,
        "marginVertical": 0,
        "position": "relative",
        "shadowColor": "#B4B6BA",
        "shadowOffset": Object {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 25,
          "paddingTop": 35,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/celebrateHearts.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontSize": 24,
            "fontWeight": "300",
            "paddingTop": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Celebrate One Another
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 50,
            "paddingVertical": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      See and celebrate one another's Steps of Faith.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
          "right": 10,
          "top": 10,
        },
        Object {},
      ]
    }
  >
    <SvgMock
      color="#B4B6BA"
      onPress={[Function]}
      testID="CloseIcon"
    />
  </View>
</View>
`;

exports[`OnboardingCard render celebrate card hidden 1`] = `null`;

exports[`OnboardingCard render challenges card | Admin 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 4,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginVertical": 8,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 0,
        "marginBottom": 5,
        "marginHorizontal": 0,
        "marginVertical": 0,
        "position": "relative",
        "shadowColor": "#B4B6BA",
        "shadowOffset": Object {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 25,
          "paddingTop": 35,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/challengeTarget.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontSize": 24,
            "fontWeight": "300",
            "paddingTop": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Our Challenges
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 50,
            "paddingVertical": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Create a community challenge everyone can join.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
          "right": 10,
          "top": 10,
        },
        Object {},
      ]
    }
  >
    <SvgMock
      color="#B4B6BA"
      onPress={[Function]}
      testID="CloseIcon"
    />
  </View>
</View>
`;

exports[`OnboardingCard render challenges card | Member 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 4,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginVertical": 8,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 0,
        "marginBottom": 5,
        "marginHorizontal": 0,
        "marginVertical": 0,
        "position": "relative",
        "shadowColor": "#B4B6BA",
        "shadowOffset": Object {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 25,
          "paddingTop": 35,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/challengeTarget.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontSize": 24,
            "fontWeight": "300",
            "paddingTop": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Our Challenges
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 50,
            "paddingVertical": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Join each other in a challenge created for your community.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
          "right": 10,
          "top": 10,
        },
        Object {},
      ]
    }
  >
    <SvgMock
      color="#B4B6BA"
      onPress={[Function]}
      testID="CloseIcon"
    />
  </View>
</View>
`;

exports[`OnboardingCard render challenges card hidden 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 4,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginVertical": 8,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 0,
        "marginBottom": 5,
        "marginHorizontal": 0,
        "marginVertical": 0,
        "position": "relative",
        "shadowColor": "#B4B6BA",
        "shadowOffset": Object {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 25,
          "paddingTop": 35,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/celebrateHearts.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontSize": 24,
            "fontWeight": "300",
            "paddingTop": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Celebrate One Another
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 50,
            "paddingVertical": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      See and celebrate one another's Steps of Faith.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
          "right": 10,
          "top": 10,
        },
        Object {},
      ]
    }
  >
    <SvgMock
      color="#B4B6BA"
      onPress={[Function]}
      testID="CloseIcon"
    />
  </View>
</View>
`;

exports[`OnboardingCard render contacts card 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 4,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginVertical": 8,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 0,
        "marginBottom": 5,
        "marginHorizontal": 0,
        "marginVertical": 0,
        "position": "relative",
        "shadowColor": "#B4B6BA",
        "shadowOffset": Object {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 25,
          "paddingTop": 35,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/MemberContacts.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontSize": 24,
            "fontWeight": "300",
            "paddingTop": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Journey Together
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 50,
            "paddingVertical": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Stay engaged with contacts in your community.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
          "right": 10,
          "top": 10,
        },
        Object {},
      ]
    }
  >
    <SvgMock
      color="#B4B6BA"
      onPress={[Function]}
      testID="CloseIcon"
    />
  </View>
</View>
`;

exports[`OnboardingCard render contacts card hidden 1`] = `null`;

exports[`OnboardingCard render impact card 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 4,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginVertical": 8,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 0,
        "marginBottom": 5,
        "marginHorizontal": 0,
        "marginVertical": 0,
        "position": "relative",
        "shadowColor": "#B4B6BA",
        "shadowOffset": Object {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 25,
          "paddingTop": 35,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/globe.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontSize": 24,
            "fontWeight": "300",
            "paddingTop": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      See God at Work
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 50,
            "paddingVertical": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      See what God is doing as you take Steps of Faith together. 
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
          "right": 10,
          "top": 10,
        },
        Object {},
      ]
    }
  >
    <SvgMock
      color="#B4B6BA"
      onPress={[Function]}
      testID="CloseIcon"
    />
  </View>
</View>
`;

exports[`OnboardingCard render impact card hidden 1`] = `null`;

exports[`OnboardingCard render members card 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 4,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginVertical": 8,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 0,
        "marginBottom": 5,
        "marginHorizontal": 0,
        "marginVertical": 0,
        "position": "relative",
        "shadowColor": "#B4B6BA",
        "shadowOffset": Object {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 25,
          "paddingTop": 35,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/ourJourney.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontSize": 24,
            "fontWeight": "300",
            "paddingTop": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Journey Together
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 50,
            "paddingVertical": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Take a Step of Faith with someone in your community.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
          "right": 10,
          "top": 10,
        },
        Object {},
      ]
    }
  >
    <SvgMock
      color="#B4B6BA"
      onPress={[Function]}
      testID="CloseIcon"
    />
  </View>
</View>
`;

exports[`OnboardingCard render members card hidden 1`] = `null`;

exports[`OnboardingCard render steps card 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 4,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginVertical": 8,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 0,
        "marginBottom": 5,
        "marginHorizontal": 0,
        "marginVertical": 0,
        "position": "relative",
        "shadowColor": "#B4B6BA",
        "shadowOffset": Object {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 25,
          "paddingTop": 35,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/footprints.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontSize": 24,
            "fontWeight": "300",
            "paddingTop": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Steps of Faith
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 50,
            "paddingVertical": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Choose a person in People view to add a new step
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
          "right": 10,
          "top": 10,
        },
        Object {},
      ]
    }
  >
    <SvgMock
      color="#B4B6BA"
      onPress={[Function]}
      testID="CloseIcon"
    />
  </View>
</View>
`;

exports[`OnboardingCard render steps card hidden 1`] = `null`;

exports[`OnboardingCard render surveys card 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 4,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginVertical": 8,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 0,
        "marginBottom": 5,
        "marginHorizontal": 0,
        "marginVertical": 0,
        "position": "relative",
        "shadowColor": "#B4B6BA",
        "shadowOffset": Object {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 25,
          "paddingTop": 35,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/curiousIcon.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontSize": 24,
            "fontWeight": "300",
            "paddingTop": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Grow Together
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 50,
            "paddingVertical": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Learn about one another through survey responses.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
          "right": 10,
          "top": 10,
        },
        Object {},
      ]
    }
  >
    <SvgMock
      color="#B4B6BA"
      onPress={[Function]}
      testID="CloseIcon"
    />
  </View>
</View>
`;

exports[`OnboardingCard render surveys card hidden 1`] = `null`;

exports[`handles press event from the close button 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 4,
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginVertical": 8,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 2,
      },
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 0,
        "marginBottom": 5,
        "marginHorizontal": 0,
        "marginVertical": 0,
        "position": "relative",
        "shadowColor": "#B4B6BA",
        "shadowOffset": Object {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "padding": 25,
          "paddingTop": 35,
        },
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/celebrateHearts.png",
        }
      }
      style={
        Object {
          "height": 60,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontSize": 24,
            "fontWeight": "300",
            "paddingTop": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      Celebrate One Another
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 50,
            "paddingVertical": 5,
            "textAlign": "center",
          },
        ]
      }
    >
      See and celebrate one another's Steps of Faith.
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
          "right": 10,
          "top": 10,
        },
        Object {},
      ]
    }
  >
    <SvgMock
      color="#B4B6BA"
      onPress={[Function]}
      testID="CloseIcon"
    />
  </View>
</View>
`;
